express3.0 支持socket.io

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.11"
+      "express": "*"
     , "jade": ">= 0.0.1"
+    ,"socket.io":"*"
   }
 }
